--- a/oops/requirements.txt
+++ b/oops/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.4
 click==7.1.2
 Django==2.1
+gunicorn==20.1.0
 joblib==1.0.1
 nltk==3.6.2
 numpy==1.20.2
@@ -17,3 +18,4 @@ sqlparse==0.4.1
 threadpoolctl==2.1.0
 tqdm==4.60.0
 typing-extensions==3.10.0.0
+whitenoise==5.2.0
